# final_ver

./: .gitignore  README.md
bridge/: .gitignore  HANDOVER_USAGE.md  README.md  SDK_LESS_VERIFICATION.md  adapter.py  be_integration.py  bridge_api.py  config.py  debug_url.py  dev_test.py  docs_manager.py  error_handler.py  handover.bat  installer.iss  low_spec_simulator.ps1  main.py  performance.py  pyproject.toml  schemas.py  verify_low_spec.py  verify_refactor.py
bridge/ai/: api_server.py  auto_analyzer.py  handover_rag_v2.py  handover_rag_v3.py  local_rag.py  main.py  requirements.txt
bridge/be/: .gitignore  pyproject.toml
bridge/be/core/: parser.py  processor.py  rules.py
bridge/be/tests/: test_parser.py  test_pdf.py  test_pdf_debug.py  test_rules.py
bridge/bridge_build/: index.html
bridge/bridge_build/assets/: index-B1TKs0kb.css  index-iWEiqfxs.js
bridge/core/: adapter.py  analyzer.py  schemas.py
bridge/docs/: ★유엔참전용사 등 재방한 초청사업 운영지침(260130개정) (1).hwpx  「국방 지식관리시스템 운영 예규」 전문.hwp
bridge/fe/: .gitignore  README.md
bridge/fe/Make_up/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
bridge/fe/Make_up/src/: App.css  App.jsx  index.css  main.jsx
bridge/fe/Make_up/src/features/chat/: index.js
bridge/fe/Make_up/src/features/dashboard/: index.js
bridge/fe/Make_up/src/features/docWriter/: index.js
bridge/fe/Make_up/src/features/fileExplorer/: index.js
bridge/fe/Make_up/src/mocks/: delay.js  projects.js
bridge/fe/Make_up/src/pages/: ExplorerPage.jsx
bridge/test_data_api_check/: test_doc.txt
(+50 files in other folders)
